--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   http: ^1.6.0
   provider: ^6.1.5+1
   intl: ^0.20.2
+  share_plus: ^10.0.0   # ✅ thêm dòng này
 
 dev_dependencies:
   flutter_test:
